@startuml

title __PANELS's Class Diagram__\n

  namespace orders {
    namespace view.panels {
      class orders.view.panels.OrdersPanel {
          ~ accepted : JPanel
          ~ completedBy : JPanel
          ~ completedFor : JPanel
          ~ inbox : JPanel
          ~ outbox : JPanel
          ~ processed : JPanel
          - mainBox : Box
          - tabs : JTabbedPane
          + OrdersPanel()
          - renderAccepted()
          - renderDrawn()
          - renderFinished()
          - renderIn()
          - renderOut()
          - renderProcess()
      }
    }
  }
  

  namespace orders {
    namespace view.panels {
      class orders.view.panels.ProfilePanel {
          - avatarBox : Box
          - avatarandnameBox : Box
          - bigBox : Box
          - galleryBox : Box
          - info : JLabel
          - infoBox : Box
          - nameBox : Box
          + ProfilePanel()
      }
    }
  }
  

  namespace orders {
    namespace view.panels {
      class orders.view.panels.UsersPanel {
          - bigBox : Box
          + UsersPanel()
      }
    }
  }
  

  orders.view.panels.OrdersPanel -up-|> javax.swing.JPanel
  orders.view.panels.ProfilePanel -up-|> javax.swing.JPanel
  orders.view.panels.UsersPanel -up-|> javax.swing.JPanel


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
